@@ -6,7 +6,7 @@
 #include <errmsg.h>
 
 #ifndef O_BINARY
-#define O_BINARY
+#define O_BINARY 0
 #endif
 
 int main(int argc,char* argv[]) {
